sna: Fixup pixmap validation for sna_copy_area()

Remember to offset the box by the drawable deltas in order to
compensate for compositing.

Reported-by: Jiri Slaby <jirislaby@gmail.com>
References: https://bugs.freedesktop.org/show_bug.cgi?id=52142
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>